--- a/frontend/src/app/header/logout-header.component.html
+++ b/frontend/src/app/header/logout-header.component.html
@@ -31,11 +31,11 @@
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/register']">Register</a>
-        </li>
-        <li class="nav-item">
+        <li class="nav-item mx-md-2">
           <a class="nav-link" [routerLink]="['/login']">Login</a>
+        </li>
+        <li class="nav-item mx-md-2">
+          <a class="nav-link btn btn-outline-secondary" [routerLink]="['/register']">Sign Up</a>
         </li>
       </ul>
     </div>
