"Footer and Demo form added"

--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -49,6 +49,7 @@
 </header>
 
 <!--Section How does it Work-->
+
 <section class="py-5 container">
   <div class="row justify-content-center py-3 mt-4">
     <h2 class="display-4 text-uppercase text-center col-12">How does it Work?</h2>
@@ -60,7 +61,7 @@
   </div>
   <div class="row py-5">
     <div class="col-lg-3 col-md-6 text-center">
-      <i class="fas fa-cogs fa-3x"></i>
+      <i class="fas fa-cogs fa-3x text-primary"></i>
       <h4 class="mt-4">Fully Automated</h4>
       <p class="my-2 py-1 section-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius
@@ -69,7 +70,7 @@
       </p>
     </div>
     <div class="col-lg-3 col-md-6 text-center">
-      <i class="fas fa-clock fa-3x"></i>
+      <i class="fas fa-clock fa-3x text-primary"></i>
       <h4 class="mt-4">See Real Time Response</h4>
       <p class="my-2 py-1 section-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius
@@ -78,7 +79,7 @@
       </p>
     </div>
     <div class="col-lg-3 col-md-6 text-center">
-      <i class="fas fa-compass fa-3x"></i>
+      <i class="fas fa-compass fa-3x text-primary"></i>
       <h4 class="mt-4">Geolocation Targeting</h4>
       <p class="my-2 py-1 section-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius
@@ -87,7 +88,7 @@
       </p>
     </div>
     <div class="col-lg-3 col-md-6 text-center">
-      <i class="far fa-user-circle fa-3x"></i>
+      <i class="far fa-user-circle fa-3x text-primary"></i>
       <h4 class="mt-4">Personalization</h4>
       <p class="my-2 py-1 section-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam dolorem dolorum eaque eius
@@ -97,7 +98,9 @@
     </div>
   </div>
 </section>
+
 <!--Section Product Features-->
+
 <section class="py-5 container-fluid bg-light">
   <div class="container">
     <div class="row justify-content-center py-3 mt-4">
@@ -157,7 +160,9 @@
     </div>
   </div>
 </section>
+
 <!--section benefits-->
+
 <section class="py-5 container">
   <div class="row justify-content-center py-3 mt-4">
     <h2 class="display-4 text-uppercase text-center col-12">Benefits</h2>
@@ -240,36 +245,75 @@
     </div>
   </div>
 </section>
+
 <!--Section Testimonials-->
+
 <section class="py-5 container-fluid section-testimonials">
   <div class="container">
     <div class="row justify-content-center py-3 mt-4">
       <h2 class="display-4 text-uppercase text-center col-12">Testimonials</h2>
       <span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>
     </div>
-    <div class="row my-5 py-5">
+    <div class="row my-5 pt-5 pb-2">
       <div class="col-md font-italic">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur et
           ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.
-          <cite>Laksh Bhutani</cite>
+          <cite class="d-block text-right mt-1 mr-3">-Laksh Bhutani</cite>
         </blockquote>
       </div>
       <div class="col-md font-italic">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur et
           ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.
-          <cite>Mark ZuckerBerg</cite>
+          <cite class="d-block text-right mt-1 mr-3">-Mark ZuckerBerg</cite>
         </blockquote>
       </div>
       <div class="col-md font-italic">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium alias aspernatur autem consequatur et
           ipsam iste labore nesciunt nihil non pariatur, possimus, quas quisquam quo repellendus, sequi suscipit.
-          <cite>Jeff Bezos</cite>
+          <cite class="d-block text-right mt-1 mr-3">-Jeff Bezos</cite>
         </blockquote>
       </div>
     </div>
   </div>
 </section>
+
+<!--Section Demo-Form-->
+
+<section class="py-5 container">
+  <div class="row justify-content-center py-3 mt-4">
+    <h2 class="display-4 text-uppercase text-center col-12">Ready to Improve your Business ?</h2>
+    <span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>
+  </div>
+  <div class="row py-2 justify-content-center">
+    <p class="section-title text-capitalize">Set up a time to chat with one of our experts and get a fully customized
+      demo.</p>
+  </div>
+  <div class="row justify-content-center">
+    <div class="form-group">
+      <label for="firstName" class="col-sm-3 col-form-label">First Name</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" id="firstName" placeholder="First Name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="lastName" class="col-sm-3 col-form-label">Last Name</label>
+      <div class="col-sm-9">
+        <input type="text" class="form-control" id="lastName" placeholder="Last Name">
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--UND-Footer-->
+
+<footer class="bg-dark text-light">
+  <div class="container">
+    <app-footer></app-footer>
+  </div>
+
+</footer>
+
 </body>
