--- a/frontend/src/app/login/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/login/forgot-password/forgot-password.component.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-sm-12 text-right">
             <button
-              type="email"
+              type="submit"
               class="btn btn-primary"
               data-toggle="modal"
               data-target="#exampleModalLong"
