"Footer and Demo form added"

--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -1,4 +1,5 @@
 <body>
+<!--UND header-->
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-2">
     <div class="container">
