--- a/frontend/src/app/login/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/login/forgot-password/forgot-password.component.html
@@ -1,43 +1,43 @@
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-link pl-0"
+        data-toggle="modal" data-target="#forgotPasswordModal"
+        (click)="emptyUserEmail()">
+  Forgot Password ?
+</button>
+
 <!-- Modal -->
-<div class="modal fade modal-dialog-centered " id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-     aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Forgot Password ?</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onCancel()">
+        <h5 class="modal-title" id="forgotPasswordModalTitle">Forgot Password ?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form (ngSubmit)="onSubmit()"  #f="ngForm">
-          <div class="form-group text-left col-sm-12">
+        <form novalidate #f="ngForm">
+          <div class="form-group">
             <label for="email">Email</label>
-            <br>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              ngModel
-              #email = "ngModel"
-              placeholder="Email"
-              email
-              required>
-
-            <span *ngIf="!email.valid && email.touched" class="help-block" #emailRequired>Email is required</span>
-          </div>
-          <div class="col-sm-12 text-right">
-            <button
-              type="email"
-              class="btn btn-primary"
-              data-toggle="modal"
-              data-target="#exampleModalLong"
-              [disabled]="!email.valid"
-              >Submit</button>
+            <input type="email"
+                   class="form-control"
+                   name="email"
+                   id="email"
+                   [(ngModel)]="user.email"
+                   placeholder="Email"
+                   #userEmail="ngModel"
+                   email>
+            <div class="feedback text-danger" *ngIf="userEmail.errors && userEmail.touched && user.email!='' ">
+              <p>Invalid email</p>
+            </div>
           </div>
         </form>
-
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary"
+                data-dismiss="modal" (click)="submitEmail()"
+                [disabled]="f.invalid">Submit</button>
       </div>
     </div>
   </div>
