--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -1,5 +1,7 @@
 <body>
+
 <!--UND header-->
+
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-2">
     <div class="container">
@@ -292,20 +294,33 @@
     <p class="section-title text-capitalize">Set up a time to chat with one of our experts and get a fully customized
       demo.</p>
   </div>
-  <div class="row justify-content-center">
-    <div class="form-group">
-      <label for="firstName" class="col-sm-3 col-form-label">First Name</label>
-      <div class="col-sm-9">
-        <input type="text" class="form-control" id="firstName" placeholder="First Name">
+  <form class="row py-4 my-2 justify-content-center">
+    <div class="col-6 ">
+
+      <div class="form-group row">
+        <label for="name" class="col-sm-4 col-form-label">Name</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="name" placeholder="Name">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="email" class="col-sm-4 col-form-label">Email</label>
+        <div class="col-sm-8">
+          <input type="email" class="form-control" id="email" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="companyName" class="col-sm-4 col-form-label">Company Name</label>
+        <div class="col-sm-8">
+          <input type="text" class="form-control" id="companyName" placeholder="Company Name">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="companyName" class="col-sm-4 col-form-label">Company Name</label>
+        
       </div>
     </div>
-    <div class="form-group">
-      <label for="lastName" class="col-sm-3 col-form-label">Last Name</label>
-      <div class="col-sm-9">
-        <input type="text" class="form-control" id="lastName" placeholder="Last Name">
-      </div>
-    </div>
-  </div>
+  </form>
 </section>
 
 <!--UND-Footer-->
