--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -17,7 +17,7 @@
               <li><a href="">Documentation</a></li>
               <li><a href="">Support</a></li>
               <li><a href="">Legal Terms</a></li>
-              <li><a href="">About</a></li>
+              <li><a [routerLink]="['/aboutus']">About</a></li>
             </ul>
           </div>
         </div>
