--- a/frontend/src/app/header/logout-header.component.html
+++ b/frontend/src/app/header/logout-header.component.html
@@ -1,6 +1,7 @@
 <div class="fluid">
   <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">UserNDot</a>
+    <div class="container">
+    <a class="navbar-brand" [routerLink]="['/']">UserNDot</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -38,6 +39,7 @@
           <a class="nav-link btn btn-outline-secondary" [routerLink]="['/register']">Sign Up</a>
         </li>
       </ul>
+    </div>
     </div>
   </nav>
 </div>
