--- a/frontend/src/app/landing-page-und/landing-page-und.component.scss
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.scss
@@ -1,10 +1,8 @@
-html, body {
-  font-family: 'Lato', 'Arial', 'sans-serif';
-  text-rendering: optimizeLegibility;
-  font-size: 20px;
-  overflow-x: hidden;
+#homepage {
+  margin-top:-1.47em;
   font-weight: 400;
   color: #555555 !important;
+  background: white;
 }
 
 header {
@@ -18,24 +16,26 @@ header {
 
 .und-heading {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -45%);
 }
 
 .und-heading h1 {
-  font-size: 3.5rem;
+  font-size: 3.2rem;
 }
-
+.display-4 {
+  font-size: 3rem;
+}
 /*Button not displaying cursor on hover Bug in alpha version of bootstrap resolved by below code*/
 .btn:not(:disabled):not(.disabled) {
   cursor: pointer;
 }
 .section-title {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
 }
 .section-paragraph {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .card-box-shadow {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
@@ -57,4 +57,13 @@ blockquote:before {
   top: -80px;
   left: -25px;
   height: 30px;
+}
+// Media Queries
+@media only screen and (max-width: 800px){
+  .und-heading h1 {
+    font-size: 2.7rem;
+  }
+  .display-4 {
+    font-size: 2.1rem;
+  }
 }
