--- a/frontend/src/app/demo-form/demo-form.component.html
+++ b/frontend/src/app/demo-form/demo-form.component.html
@@ -4,26 +4,44 @@
     <div class="form-group row">
       <label for="name" class="col-sm-5 col-form-label">Name</label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="name" placeholder="Name">
+        <input type="text" class="form-control" id="name"
+               placeholder="Name"
+               name="visitorName"
+               [(ngModel)]="visitorName">
       </div>
     </div>
     <div class="form-group row">
       <label for="email" class="col-sm-5 col-form-label">Email</label>
       <div class="col-sm-7">
-        <input type="email" class="form-control" id="email" placeholder="Email">
+        <input type="email" class="form-control" id="email"
+               placeholder="Email"
+               name="email"
+               [(ngModel)]="demoRequest.email">
       </div>
     </div>
     <div class="form-group row">
       <label for="companyName" class="col-sm-5 col-form-label">Company Name</label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="companyName" placeholder="Company Name">
+        <input type="text" class="form-control" id="companyName"
+               placeholder="Company Name"
+               name="Company Name"
+              [(ngModel)]="demoRequest.name">
       </div>
     </div>
     <div class="form-group row">
       <label for="phoneNumber" class="col-sm-5 col-form-label">Phone Number</label>
       <div class="col-sm-7" style="width: 300px">
-        <ngx-intl-tel-input [(value)]="phone_number" [preferredCountries]="preferredCountries"></ngx-intl-tel-input>
+        <ngx-intl-tel-input [(value)]="demoRequest.phone" [preferredCountries]="preferredCountries"></ngx-intl-tel-input>
       </div>
+    </div>
+    <div class="modal-footer" *ngIf="modalDemoButton">
+      <button type="button" class="btn btn-primary text-capitalize w-100 h-25"
+              data-dismiss="modal"
+              (click)="submitDemoForm()">Get your free demo now !</button>
+    </div>
+    <div class="form-group row col-sm-7 pull-right pl-0" *ngIf="!modalDemoButton">
+      <button type="button" class="btn btn-primary "
+              (click)="submitDemoForm()">Schedule a Demo</button>
     </div>
   </div>
 </form>
