--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -33,12 +33,12 @@
             </button>
           </div>
           <div class="modal-body">
-            <app-demo-form></app-demo-form>
+            <app-demo-form [modalDemoButton]="true"></app-demo-form>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary text-capitalize w-100 h-25"
-                    data-dismiss="modal">Get your free demo now !</button>
-          </div>
+          <!--<div class="modal-footer">-->
+            <!--<button type="button" class="btn btn-primary text-capitalize w-100 h-25"-->
+                    <!--data-dismiss="modal">Get your free demo now !</button>-->
+          <!--</div>-->
         </div>
       </div>
     </div>
@@ -284,19 +284,15 @@
       <h2 class="display-4 text-uppercase text-center col-12">Ready to Improve your Business ?</h2>
       <span class="d-block bg-primary mt-3" style="height: 3px;width: 70px;"></span>
     </div>
-    <!--<div class="row py-2 justify-content-center">-->
-      <!--<p class="section-title text-capitalize text-center">Set up a time to chat with one of our experts and get a fully customized-->
-        <!--demo.</p>-->
-    <!--</div>-->
     <div class="row py-2 justify-content-center text-center">
       <p class="section-title text-capitalize px-2">Setup a time to chat with one of our experts and get a fully customized demo.</p>
     </div>
     <div  class="row py-4 my-2 justify-content-center">
       <div class="col-md-6 px-4">
       <app-demo-form></app-demo-form>
-      <div class="form-group row col-sm-7 pull-right pl-0">
-          <button type="button" class="btn btn-primary ">Schedule a Demo</button>
-      </div>
+      <!--<div class="form-group row col-sm-7 pull-right pl-0">-->
+          <!--<button type="button" class="btn btn-primary ">Schedule a Demo</button>-->
+      <!--</div>-->
     </div>
     </div>
   </section>
