--- a/frontend/src/app/settings/email-list/email-list.component.html
+++ b/frontend/src/app/settings/email-list/email-list.component.html
@@ -1,37 +1,34 @@
 <div class="row justify-content-center">
-  <div class="col-sm-5">
-    <div class="input-group my-2">
-      <input type="text" placeholder="Add Email" class="form-control">
-      <div class="input-group-append">
-        <button class="btn btn-primary" type="button">Add Email</button>
-      </div>
-    </div>
+  <div class="col-lg-6 col-md-8 col-sm-10">
+    <form class="form-row mx-0" novalidate>
+      <input type="text"
+             name="name"
+             placeholder="Name" class="form-control col-md-4 mr-4 mt-2"
+             [(ngModel)]="sendersInfo.personal">
+      <input type="email"
+             name="email"
+             placeholder="Email" class="form-control col-md-5 mr-auto mt-2"
+            [(ngModel)]="sendersInfo.address">
+      <button class="btn btn-primary mt-2 info-add"
+              type="add"
+              (click)="addSendersInfo()">Add Info</button>
+    </form>
     <div class="table-responsive-sm mt-4">
-      <table class="table table-hover table-bordered">
+      <table class="table table-hover">
         <thead>
           <tr class="bg-dark text-light">
-            <th scope="col">#</th>
+            <th scope="col">Name</th>
             <th scope="col">Email Id</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>lakshbhutani@gmail.com
+          <tr *ngFor="let senderInfo of sendersInfoList">
+            <td>{{senderInfo.personal}}</td>
+            <td>{{senderInfo.address}}
               <div class="pull-right">
-                <button class="btn btn-danger btn-sm pull-right">Delete</button>
+                <button class="btn btn-danger btn-sm pull-right" (click)="deleteSendersInfo(senderInfo)">Delete</button>
               </div>
             </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>kamalpreetSingh@gmail.com
-              <button class="btn btn-danger btn-sm float-right">Delete</button></td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td class="clearfix">laksh14csu103@ncuindia.edu
-              <button class="btn btn-danger btn-sm float-right">Delete</button></td>
           </tr>
         </tbody>
       </table>
