--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -5,11 +5,10 @@
   <header>
 
     <div class="und-heading container">
-      <div class=" row justify-content-center align-items-center">
-        <h1 class="text-white text-uppercase font-weight-bold text-center col-12">Improve User Experience with
+      <div class="row justify-content-center align-items-center">
+        <h1 class="text-white font-weight-bold text-center col-12">Improve User Experience with
           <br>Personalized Marketing</h1>
-        <!--<button class="btn btn-primary btn-lg mt-3 ">Schedule a Demo</button>-->
-        <!-- Button trigger Demo-Form modal -->
+        <h2 class="text-center text-white col-12">Stop Marketing, Start Engaging</h2>
         <button type="button"
                 class="btn btn-primary btn-lg mt-2" data-toggle="modal"
                 data-target="#demoFormModal">
