--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,8 @@
 
 @import "styles/scss/custombootstrap";
 @import "~bootstrap/scss/bootstrap";
+
+body, html {
+  font-size: 14.2px;
+  line-height: 1.5;
+}
