--- a/frontend/src/app/settings/settings.component.html
+++ b/frontend/src/app/settings/settings.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-4">
+<div class="container-fluid mb-4">
   <h2 class="text-center">Settings</h2>
   <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
