--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -6,17 +6,17 @@
         <div class="row">
           <div class="col-sm-3">
             <ul class="list-unstyled">
-              <li><a href="">Product</a></li>
-              <li><a href="">Benefits</a></li>
-              <li><a href="">Partners</a></li>
-              <li><a href="">Team</a></li>
+              <li><a [routerLink]="['/']">Product</a></li>
+              <li><a [routerLink]="['/']">Benefits</a></li>
+              <li><a [routerLink]="['/']">Partners</a></li>
+              <li><a [routerLink]="['/']">Team</a></li>
             </ul>
           </div>
           <div class="col-sm-3">
             <ul class="list-unstyled">
-              <li><a href="">Documentation</a></li>
-              <li><a href="">Support</a></li>
-              <li><a href="">Legal Terms</a></li>
+              <li><a [routerLink]="['/']">Documentation</a></li>
+              <li><a [routerLink]="['/']">Support</a></li>
+              <li><a [routerLink]="['/terms-of-service']">Terms of Service</a></li>
               <li><a [routerLink]="['/aboutus']">About</a></li>
             </ul>
           </div>
