--- a/frontend/src/app/demo-form/demo-form.component.html
+++ b/frontend/src/app/demo-form/demo-form.component.html
@@ -1,5 +1,5 @@
 
-<form>
+<form #f="ngForm" novalidate>
   <div>
     <div class="form-group row">
       <label for="name" class="col-sm-5 col-form-label">Name</label>
@@ -7,6 +7,9 @@
         <input type="text" class="form-control" id="name"
                placeholder="Name"
                name="visitorName"
+               pattern="[A-Za-z0-9-_][A-Za-z0-9\s-_]*"
+               #nameOfVisitor="ngModel"
+               [ngClass]="{'border-danger':nameOfVisitor.touched }"
                [(ngModel)]="visitorName">
       </div>
     </div>
@@ -16,7 +19,10 @@
         <input type="email" class="form-control" id="email"
                placeholder="Email"
                name="email"
-               [(ngModel)]="demoRequest.email">
+               [(ngModel)]="demoRequest.email"
+               [ngClass]="{'border-danger':demoRequestEmail.invalid && (demoRequestEmail.touched || demoRequestEmail.dirty)}"
+               #demoRequestEmail="ngModel"
+               email>
       </div>
     </div>
     <div class="form-group row">
@@ -25,7 +31,10 @@
         <input type="text" class="form-control" id="companyName"
                placeholder="Company Name"
                name="Company Name"
-              [(ngModel)]="demoRequest.name">
+              [(ngModel)]="demoRequest.name"
+               pattern="[A-Za-z0-9-_][A-Za-z0-9\s-_]*"
+               #companyName="ngModel"
+               [ngClass]="{'border-danger':companyName.invalid && (companyName.touched || companyName.dirty)}">
       </div>
     </div>
     <div class="form-group row">
@@ -37,7 +46,8 @@
     <div class="modal-footer" *ngIf="modalDemoButton">
       <button type="button" class="btn btn-primary text-capitalize w-100 h-25"
               data-dismiss="modal"
-              (click)="submitDemoForm()">Get your free demo now !</button>
+              (click)="submitDemoForm()"
+              [disabled]="f.invalid">Get your free demo now !</button>
     </div>
     <div class="form-group row col-sm-7 pull-right pl-0" *ngIf="!modalDemoButton">
       <button type="button" class="btn btn-primary "
