--- a/frontend/src/app/templates/templates.component.html
+++ b/frontend/src/app/templates/templates.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h2 class="text-center">Templates</h2>
   <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
