Chart on dashboard

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -8,4 +8,7 @@
       <li *ngFor="let user of users">{{user.standardInfo.firstName}} {{user.standardInfo.lastName}}</li>
     </ul>
   </div>
+  <div [hidden]="!chart">
+    <canvas id="canvas">{{ chart }}</canvas>
+  </div>
 </div>
