--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -5,14 +5,14 @@
       <h2 class="text-center">Login</h2>
       <form name="form" (ngSubmit)="f.form.valid && login()" #f="ngForm" novalidate>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" id="username" name="username" [(ngModel)]="model.username" #username="ngModel"
+          <label for="username">Email / Username</label>
+          <input type="text" class="form-control" placeholder="Email / Username" id="username" name="username" [(ngModel)]="model.username" #username="ngModel"
                  required/>
           <div *ngIf="f.submitted && !username.valid" class="help-block">Username is required</div>
         </div>
         <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" name="password" [(ngModel)]="model.password" #password="ngModel"
+          <input type="password" class="form-control" placeholder="Password" id="password" name="password" [(ngModel)]="model.password" #password="ngModel"
                  required/>
           <div *ngIf="f.submitted && !password.valid" class="help-block">Password is required</div>
         </div>
