--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse text-md-start text-right" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" [routerLink]="['/']"><i class="fa fa-home"></i> Home</a>
+          <a class="nav-link" [routerLink]="['/dashboard']"><i class="fa fa-home"></i> Dashboard</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownTemplates" role="button" data-toggle="dropdown"
