Edit and Delete buttons

--- a/frontend/src/app/templates/email-templates/email-templates.component.html
+++ b/frontend/src/app/templates/email-templates/email-templates.component.html
@@ -45,10 +45,10 @@
         <td>{{et.from}}</td>
         <td>{{et.messageType}}</td>
         <td>{{et.emailTemplateBody}}</td>
-        <td><button class="btn btn-warning btn-sm"
+        <td><button class="btn btn-sm btn-outline-secondary"
                     data-toggle="modal"
                     data-target="#exampleModalLong"
-                    (click)="onEdit(et)">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
+                    (click)="onEdit(et)"><i class="fas fa-pencil-alt icon-light"></i></button> <button class="btn btn-sm btn-outline-secondary"><i class="fas fa-trash icon-light"></i></button></td>
       </tr>
       </tbody>
     </table>
