--- a/frontend/src/app/templates/sms-templates/sms-templates.component.html
+++ b/frontend/src/app/templates/sms-templates/sms-templates.component.html
@@ -43,7 +43,7 @@
         <td>{{st.from}}</td>
         <td>{{st.messageType}}</td>
         <td>{{st.smsTemplateBody}}</td>
-        <td><button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#exampleModalLong" (click)="onEdit(st)">Edit</button> <button class="btn btn-danger btn-sm">Delete</button></td>
+        <td><button class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#exampleModalLong" (click)="onEdit(st)"><i class="fas fa-pencil-alt icon-light"></i></button> <button class="btn btn-outline-secondary btn-sm"><i class="fas fa-trash icon-light"></i></button></td>
       </tr>
       </tbody>
     </table>
