--- a/frontend/src/app/landing-page-und/landing-page-und.component.scss
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.scss
@@ -67,3 +67,9 @@ blockquote:before {
     font-size: 2.1rem;
   }
 }
+.benefits-paragraph {
+  font-size: 1.1rem;
+}
+.icon-light {
+  opacity: 0.4;
+}
