--- a/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
+++ b/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
@@ -20,7 +20,7 @@
   <!--<div class="form-group col-1 ml-3 px-0" *ngIf="eventProperty" [hidden]="hideInputNumber">-->
     <!--<input type="number" class="form-control col-12" value="1" min="1">-->
   <!--</div>-->
-  <div *ngIf="selectedProperty && selectedProperty.dataType=='timerange'" class="d-flex flex-row flex-md-wrap">
+  <div *ngIf="selectedProperty && selectedProperty.dataType=='timerange'" class="d-flex flex-row flex-wrap">
     <div class="mx-2 d-inline-flex">
       <label class="pr-2">From :</label>
       <div class="mr-1 ">
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="form-group" *ngIf="selectedProperty && selectedProperty.dataType==='select'">
-      <select class="form-control" *ngIf="selectedProperty.dataType==='select'">
+      <select class="form-control" *ngIf="selectedProperty.dataType==='select'" [(ngModel)]="propertyFilter.values[0]">
         <option value="" disabled selected>--Select--</option>
         <option *ngFor="let prop of selectedProperty.options" [value]="prop">{{prop}}</option>
       </select>
@@ -72,6 +72,7 @@
     <select2 class="ml-2"
              [data]="getSelectedPropertyOptions()"
              [options]="select2Options"
+             (valueChanged)="select2ValueChanged($event, selectedProperty)"
              [width]="380"></select2>
   </div>
   <button type="button" class="close ml-auto mr-4 pos" aria-label="Close" (click)="removeObject()">
